tests/reference/tokens-symbols1-658c990.stderr
tokenizer error: Token '\' is not recognized
  --> tests/tokens/symbols1.py:50:14
   |
50 | if i >= 1 or \
   |              ^ token not recognized
